Serve JSON for auth endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/auth",
+      "destination": "/auth.json"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
